# lila-agent-skills

./: .gitignore  .secrets.baseline  AGENTS.md  LICENSE  Makefile  QUALITY.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pages.yml  quality.yml
docs/: index.html  site.css
docs/theme/: COPYRIGHT.txt  LICENSE  compact-theme.css  compact-theme.js
scripts/: check_secrets.py  check_skill_behavior.py  check_skills.py
skills/clean-git-branches/: SKILL.md
skills/clean-git-branches/agents/: openai.yaml
skills/github-merge-pull-request/: SKILL.md
skills/github-merge-pull-request/agents/: openai.yaml
skills/github-publish-changes/: CHANGELOG.md  SKILL.md
skills/github-publish-changes/agents/: openai.yaml
skills/github-publish-changes/references/: candidate-tree-verification.md  remote-and-ci-edge-cases.md
skills/github-publish-changes/scripts/: publish_preflight.py
skills/prepare-agent-compatible-repository/: SKILL.md
skills/prepare-agent-compatible-repository/agents/: openai.yaml
skills/verify-repository/: SKILL.md
skills/verify-repository/agents/: openai.yaml
skills/verify-repository/scripts/: repo_audit.py
skills/write-repository-readme/: SKILL.md
skills/write-repository-readme/agents/: openai.yaml
skills/write-repository-readme/references/: github-readme-guidance.md
tests/: conftest.py  test_check_secrets.py  test_check_skill_behavior.py  test_check_skills.py  test_publish_preflight.py  test_quality_edge_cases.py  test_repo_audit.py  test_site.py
tests/fixtures/: skill_behavior.yaml
